deploy.shに実行権限を付与 + appspec.ymlのdeploy.shの指定箇所を変更

--- a/aws_deploy/appspec.yml
+++ b/aws_deploy/appspec.yml
@@ -8,6 +8,6 @@ files:
 
 hooks:
   AfterInstall:
-    - location: scripts/deploy.sh
+    - location: aws_deploy/scripts/deploy.sh
       timeout: 300
       runas: ec2-user
