--- a/aws_deploy/buildspec.yml
+++ b/aws_deploy/buildspec.yml
@@ -58,8 +58,10 @@ phases:
     commands:
       - echo "[PostBuild] Preparing artifacts for deployment"
       - mkdir -p output
+      - cp aws_deploy/appspec.yml output/appspec.yml
       - rsync -av --exclude output ./ output/
-      - cp output/aws_deploy/appspec.yml output/appspec.yml
+      # - cp output/aws_deploy/appspec.yml output/appspec.yml
+      
       - echo "[PostBuild] Listing output directory"
       - find output
 artifacts:
