buildspecのcpとrsyncの順番を入れ替え

--- a/aws_deploy/buildspec.yml
+++ b/aws_deploy/buildspec.yml
@@ -58,9 +58,10 @@ phases:
     commands:
       - echo "[PostBuild] Preparing artifacts for deployment"
       - mkdir -p output
-      - cp aws_deploy/appspec.yml output/appspec.yml
+      
       - rsync -av --exclude output ./ output/
-           
+      - cp aws_deploy/appspec.yml output/appspec.yml
+      - ls -la output
       - echo "[PostBuild] Listing output directory"
       - find output
 artifacts:
