appspec.ymlに、app/にcodebuild結果が並ぶように変更をかけた

--- a/aws_deploy/appspec.yml
+++ b/aws_deploy/appspec.yml
@@ -5,7 +5,7 @@ files:
   - source: .
     destination: /home/ec2-user/app
     overwrite: true
-
+    flatten: true
 # hooks:
 #   AfterInstall:
 #     - location: aws_deploy/scripts/deploy.sh
