--- a/aws_deploy/appspec.yml
+++ b/aws_deploy/appspec.yml
@@ -13,7 +13,7 @@ files:
 #       runas: ec2-user
 
 hooks:
-  BeforeInstall:
+  AfterInstall:
     - location: aws_deploy/scripts/deploy.sh
       timeout: 300
       runas: ec2-user
