buildspec.ymlを編集 フロントエンドのビルド前に、Githubからの取得したファイル・ディレクトリの所有者・所有グループを1000:1000にする。

--- a/aws_deploy/buildspec.yml
+++ b/aws_deploy/buildspec.yml
@@ -51,6 +51,8 @@ phases:
 
   build:
     commands:
+      - echo "[Build] Fixing permissions for docker build context"
+      - chown -R 1000:1000 .
       - echo "[Build] Running Docker Compose build frontend container"
       - docker compose -f development.yml run --rm frontend
 
