--- a/aws_deploy/buildspec.yml
+++ b/aws_deploy/buildspec.yml
@@ -46,7 +46,7 @@ phases:
         echo "[PreBuild] Patching env files with PUBLIC_IP"
         # 書き換え開始
         sed -i "s|DJANGO_ALLOWED_HOSTS=.*|DJANGO_ALLOWED_HOSTS=$PUBLIC_IP|" .envs/development/django
-        sed -i "s|VITE_API_HOST_ADDRESS=.*|VITE_API_HOST_ADDRESS=http://$PUBLIC_IP/api|" .envs/development/frontend
+        sed -i "s|VITE_API_HOST_ADDRESS=.*|VITE_API_HOST_ADDRESS=http://$PUBLIC_IP|" .envs/development/frontend
         sed -i "s|VITE_FRONT_HOST_ADDRESS=.*|VITE_FRONT_HOST_ADDRESS=http://$PUBLIC_IP|" .envs/development/frontend
 
   build:
