CodeBuildとCodeDeployのデバッグ用の表示を修正

--- a/aws_deploy/buildspec.yml
+++ b/aws_deploy/buildspec.yml
@@ -8,7 +8,14 @@ phases:
   # buildpsec.ymlに記述できるのは、以下のようにinstall ,prebuild,build,post_buildのみ
   install:
     commands:
-      - echo "[Install] Installing dependencies"
+      - echo "[installフェーズ]"
+      - set -e
+      - set -x  # ← 追加：実行されるコマンドをすべて出力
+      - pwd
+      # 以下の変数は」CodeBuildで最初から使える環境変数
+      # https://docs.aws.amazon.com/ja_jp/codebuild/latest/userguide/build-env-ref-env-vars.html
+      - echo "CODEBUILD_SRC_DIR=$CODEBUILD_SRC_DIR"
+      - ls -la .
       - apt-get update
       - apt-get install -y jq git
       - which git
@@ -16,13 +23,11 @@ phases:
       - jq --version
   pre_build:
     commands:
-      - echo "[PreBuild] Logging into Docker Hub"
+      - echo "[pre_buildフェーズ] docker-hubログイン"
       - export DOCKER_USERNAME=$(aws ssm get-parameter --name dockerhub_username --query "Parameter.Value" --output text)
       - export DOCKER_PASSWORD=$(aws ssm get-parameter --name dockerhub_password --with-decryption --query "Parameter.Value" --output text)
       - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-      - echo "[PreBuild] Checking environment"
-      - echo $CODEBUILD_SRC_DIR
-      - echo "[PreBuild] Fetching env files from Parameter Store"
+      - echo "[pre_buildフェーズ] 環境変数ファイル作成、値の取得と書換"
       # 環境変数ファイル・ディレクトリを作成
       - mkdir -p .envs/development
       # 環境変数ファイルはparamterstoreからget-paramterを--with-decryptionつきで実施 -> ファイルへ出力
@@ -31,21 +36,22 @@ phases:
       - aws ssm get-parameter --name djangoblog_envs_development_django --with-decryption --query "Parameter.Value" --output text > .envs/development/django
 
       - aws ssm get-parameter --name djangoblog_envs_development_postgres --with-decryption --query "Parameter.Value" --output text > .envs/development/postgres
+      - echo "[pre_buildフェーズ] 起動したEC2のパブリックIPを取得して、環境変数ファイルを書き換え"
       # -- 環境変数ファイルの内、EC2のパブリックIPアドレスが必要なところを書き換える --
-      - echo "[PreBuild] Fetching EC2 Public IP"
-      # 起動しているEC2インスタンスのIDをaws-cliで取得
+      # 1プロセスで実行するため、|で記述している
       - |
+        # 起動しているEC2インスタンスのIDをaws-cliで取得
         INSTANCE_ID=$(aws ec2 describe-instances \
           --filters "Name=tag:Name,Values=MyAppEc2" \
           --query "Reservations[0].Instances[0].InstanceId" \
           --output text)
-        # そのEC2インスタンスのパブリックIPを取得
+        # そのEC2インスタンスのパブリックIPをaws-cliで取得
         PUBLIC_IP=$(aws ec2 describe-instances \
           --instance-ids $INSTANCE_ID \
           --query "Reservations[0].Instances[0].PublicIpAddress" \
           --output text)
-        echo "Detected Public IP: $PUBLIC_IP"
-        echo "[PreBuild] Patching env files with PUBLIC_IP"
+        echo "Public IP = $PUBLIC_IP"
+        echo "[pre_buildフェーズ] Patching env files with PUBLIC_IP"
         # 書き換え開始
         sed -i "s|DJANGO_ALLOWED_HOSTS=.*|DJANGO_ALLOWED_HOSTS=$PUBLIC_IP|" .envs/development/django
         sed -i "s|VITE_API_HOST_ADDRESS=.*|VITE_API_HOST_ADDRESS=http://$PUBLIC_IP:8080|" .envs/development/frontend
@@ -53,28 +59,24 @@ phases:
 
   build:
     commands:
-      - echo "[Build] Fixing permissions for docker build context"
+      - echo "[buildフェーズ] ソースステージでの取得したソースコードの所有者を変更(root -> 1000)"
       - chown -R 1000:1000 .
-      - echo "[Build] Running Docker Compose build frontend container"
+      - echo "[buildフェーズ] フロントエンドコンテナのビルド開始"
       - docker compose -f development.yml run --rm frontend
 
   post_build:
     commands:
-      - echo "[PostBuild] Preparing artifacts for deployment"
+      - echo "[post_buildフェーズ] CodeDeployへと渡すアーティファクトの準備"
       - mkdir -p output
-      - echo "[PostBuild] Listing output directory before rsync"
       - pwd
       - ls -la .
       - ls -la output
+      - echo "[post_buildフェーズ] 現在のソースコード全体をoutputディレクトリにコピー"
       - rsync -av --exclude output ./ output/
       - cp aws_deploy/appspec.yml output/appspec.yml
-      - echo "[PostBuild] Listing output directory after rsync"
-      - pwd
-      - ls -la .
       - ls -la output
-      - echo "[PostBuild] Listing output directory"
-      - find output
 artifacts:
+  base-directory: output # CODEBUILD_SRC_DIR直下のoutput をルートとする
   files:
     - '**/*'            # 🔍 output/ (=base-directoryの内容)以下のすべてのファイルを対象にする
-  base-directory: output # ✅ output/ をルートとする
+  
