実験3 flatten:trueを排除しても使えるか

--- a/aws_deploy/appspec.yml
+++ b/aws_deploy/appspec.yml
@@ -7,7 +7,7 @@ files:
   - source: .
     destination: /home/ec2-user/app
     # overwrite: true
-    # flatten: true
+    flatten: true
 
 hooks:
   AfterInstall:
