--- a/aws_deploy/appspec.yml
+++ b/aws_deploy/appspec.yml
@@ -6,8 +6,8 @@ os: linux
 files:
   - source: .
     destination: /home/ec2-user/app
-    # overwrite: true
-    flatten: true
+    overwrite: true
+    # flatten: true
 
 hooks:
   AfterInstall:
